[Payments] Hide 'Add card' button when cards are not supported.

Bug: 781291
Change-Id: I4405edc4e76f3c00b4ea83eab07b3387edc7a80f
Reviewed-on: https://chromium-review.googlesource.com/849155
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526734}
Former-commit-id: 33ec65c108becbecbbe64c97a74cb12daa50904d